// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileNavigation styles should render with secondary links 1`] = `
.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  background: rgba(0, 0, 0, 0.4);
  z-index: 1000;
}

.circuit-1 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  -webkit-transform: translateY(-25%);
  -moz-transform: translateY(-25%);
  -ms-transform: translateY(-25%);
  transform: translateY(-25%);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out;
  outline: none;
  background-color: #FFF;
  overflow: hidden;
}

.circuit-1::after {
  content: '';
  display: block;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  height: 16px;
  background: linear-gradient(
                      rgba(255,255,255,0),
                      rgba(255,255,255,0.66),
                      rgba(255,255,255,1)
                    );
}

.circuit-2 {
  height: 100%;
  max-width: 480px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  margin: 0 auto;
  padding-top: 56px;
  padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
}

.circuit-3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 1;
  padding: 4px;
  background: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 1) 60%,
      rgba(255, 255, 255, 0)
    );
}

.circuit-4 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(12px - 1px);
  border-color: transparent!important;
  background-color: transparent;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-4:active,
.circuit-4[aria-expanded='true'],
.circuit-4[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-5 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-6 {
  list-style: none;
}

.circuit-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  color: #3063E9;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:hover {
  background-color: #F5F5F5;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 959px) {
  .circuit-7 {
    margin-bottom: 1px;
  }

  .circuit-7::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #CCC;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 960px) {
  .circuit-7 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-7:hover {
  background-color: #F0F6FF;
}

.circuit-8 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-9 {
  display: inline-block;
  line-height: 0;
}

.circuit-10 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
  font-weight: 700;
}

@media (max-width: 959px) {
  .circuit-10 {
    font-size: 24px;
    line-height: 28px;
  }
}

.circuit-11 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 120ms ease-in-out;
  transition: transform 120ms ease-in-out;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  margin-left: auto;
  -webkit-transition: -webkit-transform 120ms ease-in-out;
  transition: transform 120ms ease-in-out;
}

.circuit-12 {
  list-style: none;
  border-bottom: 1px solid #CCC;
  margin-bottom: -1px;
}

.circuit-12>*:last-child {
  padding-bottom: 24px;
}

.circuit-13 {
  display: inline-block;
  line-height: 0;
  margin: 32px 16px 8px;
}

.circuit-14 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 12px;
  color: #000;
  margin-bottom: 0;
}

.circuit-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  outline: none;
  color: #1A1A1A;
  background-color: #FFF;
  text-align: left;
  cursor: pointer;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 16px 24px;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.circuit-16:hover {
  background-color: #F5F5F5;
}

.circuit-16:active {
  background-color: #E6E6E6;
}

.circuit-16:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-16:focus::-moz-focus-inner {
  border: 0;
}

.circuit-16:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-16:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (min-width: 960px) {
  .circuit-16 {
    padding: 12px;
    padding-left: 20px;
  }
}

.circuit-17 {
  display: inline-block;
  line-height: 0;
  margin-right: 8px;
}

.circuit-18 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-2"
        >
          <div
            class="circuit-3"
          >
            <button
              class="circuit-4"
              title="Close navigation modal"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="circuit-5"
              >
                Close navigation modal
              </span>
            </button>
          </div>
          <nav
            aria-label="Primary"
          >
            <ul
              class="circuit-6"
            >
              <li>
                <button
                  aria-controls="collapsible_2"
                  aria-current="page"
                  aria-expanded="false"
                  class="circuit-7"
                  data-focus-list="1"
                >
                  <span
                    class="circuit-8"
                  >
                    <svg
                      fill="none"
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7 23a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14-3a3 3 0 1 0-5.999 0A3 3 0 0 0 21 20zm0-16H5.114a2 2 0 0 1-1.921-1.445L2.92 1.61a1 1 0 0 0-1.9.59l3.24 11.35A2 2 0 0 0 6.18 15H19a2 2 0 0 0 1.92-1.45l2-7c.052-.179.08-.364.08-.55a2.006 2.006 0 0 0-2-2z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="circuit-9"
                  >
                    <span
                      class="circuit-10"
                    >
                      Shop
                    </span>
                  </span>
                  <svg
                    class="circuit-11"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <ul
                  aria-hidden="true"
                  class="circuit-12"
                  id="collapsible_2"
                  role="list"
                  style="overflow-y: hidden; will-change: height; opacity: 0; height: 0px; visibility: hidden; transition: all 200ms ease-in-out;"
                >
                  <li>
                    <span
                      class="circuit-13"
                    >
                      <h3
                        class="circuit-14"
                      >
                        For Kids
                      </h3>
                    </span>
                    <ul
                      class="circuit-6"
                      role="list"
                    >
                      <li>
                        <a
                          class="circuit-16"
                          data-focus-list="3"
                          href="/shop/toys"
                        >
                          <span
                            class="circuit-17"
                          >
                            <p
                              class="circuit-18"
                            >
                              Toys
                            </p>
                          </span>
                        </a>
                      </li>
                      <li>
                        <a
                          class="circuit-16"
                          data-focus-list="3"
                          href="/shop/books"
                        >
                          <span
                            class="circuit-17"
                          >
                            <p
                              class="circuit-18"
                            >
                              Books
                            </p>
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileNavigation styles should render without secondary links 1`] = `
.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  background: rgba(0, 0, 0, 0.4);
  z-index: 1000;
}

.circuit-1 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  -webkit-transform: translateY(-25%);
  -moz-transform: translateY(-25%);
  -ms-transform: translateY(-25%);
  transform: translateY(-25%);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out;
  outline: none;
  background-color: #FFF;
  overflow: hidden;
}

.circuit-1::after {
  content: '';
  display: block;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  height: 16px;
  background: linear-gradient(
                      rgba(255,255,255,0),
                      rgba(255,255,255,0.66),
                      rgba(255,255,255,1)
                    );
}

.circuit-2 {
  height: 100%;
  max-width: 480px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  margin: 0 auto;
  padding-top: 56px;
  padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
}

.circuit-3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 1;
  padding: 4px;
  background: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 1) 60%,
      rgba(255, 255, 255, 0)
    );
}

.circuit-4 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(12px - 1px);
  border-color: transparent!important;
  background-color: transparent;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-4:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-4:active,
.circuit-4[aria-expanded='true'],
.circuit-4[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-5 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-6 {
  list-style: none;
}

.circuit-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:hover {
  background-color: #F5F5F5;
}

.circuit-7:active {
  background-color: #E6E6E6;
}

.circuit-7:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 959px) {
  .circuit-7 {
    margin-bottom: 1px;
  }

  .circuit-7::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid #CCC;
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 960px) {
  .circuit-7 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-8 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-9 {
  display: inline-block;
  line-height: 0;
}

.circuit-10 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 0;
}

@media (max-width: 959px) {
  .circuit-10 {
    font-size: 24px;
    line-height: 28px;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-2"
        >
          <div
            class="circuit-3"
          >
            <button
              class="circuit-4"
              title="Close navigation modal"
              type="button"
            >
              <svg
                fill="none"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="circuit-5"
              >
                Close navigation modal
              </span>
            </button>
          </div>
          <nav
            aria-label="Primary"
          >
            <ul
              class="circuit-6"
            >
              <li>
                <a
                  class="circuit-7"
                  data-focus-list="4"
                  href="/"
                >
                  <span
                    class="circuit-8"
                  >
                    <svg
                      fill="none"
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M23 9a1 1 0 0 1-1.57.82l-1.43-1V20.5a2.5 2.5 0 0 1-2.5 2.5H15a1 1 0 0 1-1-1v-5a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v5a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 20.5V8.82l-1.43 1A1.011 1.011 0 0 1 2 10a1 1 0 0 1-.57-1.82l10-7a.992.992 0 0 1 1.14 0l10 7A.999.999 0 0 1 23 9z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span
                    class="circuit-9"
                  >
                    <span
                      class="circuit-10"
                    >
                      Home
                    </span>
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;
